--- a/myinit.org
+++ b/myinit.org
@@ -206,13 +206,13 @@ https://piotrkazmierczak.com/2010/emacs-as-the-ultimate-latex-editor/.
 Activates latex math mode in Latex.
 
 #+BEGIN_SRC emacs-lisp
-(add-hook 'LaTeX-mode-hook 'LaTeX-math-mode)
+;(add-hook 'LaTeX-mode-hook 'LaTeX-math-mode)
 #+END_SRC
 
 Changes latex math mode prefix. It has to be changed before latex.el is loaded (see an [[http://emacs.1067599.n8.nabble.com/Set-LaTeX-math-abbrev-prefix-td84574.html][explanation]]).
 
 #+BEGIN_SRC emacs-lisp
-(setq LaTeX-math-abbrev-prefix "ç")
+;(setq LaTeX-math-abbrev-prefix "ç")
 #+END_SRC
 
 **** Latex math mode abbreviations
@@ -250,12 +250,62 @@ Explore these links:
 ** CDLaTeX
 
 Not happy with it...
+Beginning to be happy with it...
 
+Manual: https://staff.science.uva.nl/c.dominik/Tools/cdlatex/index.html
+
+#+BEGIN_SRC emacs-lisp
 (use-package cdlatex
-  :config
+  :init
+  (setq cdlatex-env-alist
+    '(("def" "\\begin{definition}\n\n\\end{definition}\n" nil)
+      ("thm" "\\begin{theorem}\nAUTOLABEL\n\n\\end{theorem}\n" nil)
+      ("lem" "\\begin{lemma}\nAUTOLABEL\n\n\\end{lemma}\n" nil)
+      ("pro" "\\begin{proposition}\nAUTOLABEL\n\n\\end{proposition}\n" nil)
+      ("cor" "\\begin{corollary}\nAUTOLABEL\n\n\\end{corollary}\n" nil)
+      ("rem" "\\begin{remark}\nAUTOLABEL\n\n\\end{remark}\n" nil)
+      ("proof" "\\begin{proof}\n\\end{proof}\n" nil)
+      ("con" "\\begin{conjecture}\nAUTOLABEL\n\n\\end{conjecture}\n" nil)
+      ("exe" "\\begin{exercise}\nAUTOLABEL\n  \\begin{statement}\n    \n  \\end{statement}\n  \\begin{answer}\n    \n  \\end{answer}\n\\end{exercise}\n" nil)
+      ("ex" "\\begin{ex}\nAUTOLABEL\n?\n\\end{ex}\n" nil)
+      ("cas" "\\begin{cases}?\\end{cases}" nil)))
+
+  (setq cdlatex-command-alist
+    '(("def" "Insert definition env" "" cdlatex-environment ("def") t nil)
+      ("thm" "Insert theorem env" "" cdlatex-environment ("thm") t nil)
+      ("lem" "Insert lemma env" "" cdlatex-environment ("lem") t nil)
+      ("prop" "Insert proposition env" "" cdlatex-environment ("prop") t nil)
+      ("cor" "Insert corollary env" "" cdlatex-environment ("cor") t nil)
+      ("rem" "Insert remark env" "" cdlatex-environment ("rem") t nil)
+      ("proof" "Insert proof env" "" cdlatex-environment ("proof") t nil)
+      ("eq" "Insert short equation env" "\\[?\\]" cdlatex-position-cursor nil t nil)
+      ("exe" "Insert an exercise env" "" cdlatex-environment ("exe") t nil)
+      ("ex" "Insert an example env" "" cdlatex-environment ("ex") t nil)
+      ("set" "Insert a set" "\\{?\\}" cdlatex-position-cursor nil t t)
+      ("frp" "Insert a fraction with partials" "\\frac{\\partial}{\\partial ?}" cdlatex-position-cursor nil t t)
+      ("cas" "Insert a cases env" cdlatex-environment ("cas") t t)
+      ("lim" "Insert a limit" "\\lim_{x \\to ?} f(x)" cdlatex-position-cursor nil t t)))
+
+  (setq cdlatex-math-symbol-alist
+    '((?i ("\\in" "\\infty" "\\imath"))
+      (?t ("\\to" "\\times" "\\tau"))
+      (?p ("\\pi" "\\varpi" "\\partial"))
+      (?n ("\\ne" "\\nu"))
+      (?c ("\\cap" "\\cup" "\\cos"))
+      ;(?< ("\\leftarrow" "\\Leftarrow" "\\longleftarrow" "\\Longleftarrow"))
+      ;(?> ("\\rightarrow" "\\Rightarrow" "\\longrightarrow" "\\Longrightarrow"))
+  ))
+
+  (setq cdlatex-math-modify-alist
+    '((?t "\\text"     "\\text"     t nil nil)
+      (?q ("\\mathbb"  nil          t nil nil)
+      (?o "\\overline" "\\overline" t nil nil))))
+
+:config
   (add-hook 'LaTeX-mode-hook 'turn-on-cdlatex)   ; with AUCTeX LaTeX mode
   (add-hook 'latex-mode-hook 'turn-on-cdlatex)   ; with Emacs latex mode
 )
+#+END_SRC
 
 ** Auto closed brackets insertion
 
@@ -263,12 +313,11 @@ Tells auctex to automatically close brackets. See the [[https://www.gnu.org/soft
 NOTE: It does not work with CDLaTeX.
 
 #+BEGIN_SRC emacs-lisp
-(setq LaTeX-electric-left-right-brace t)
+;(setq LaTeX-electric-left-right-brace t)
 #+END_SRC
 
 Adds auto close capability for $. See this [[http://tex.stackexchange.com/questions/75697/auctex-how-to-cause-math-mode-dollars-to-be-closed-automatically-with-electric][question]].
 
-#+BEGIN_SRC emacs-lisp
 (defun brf-TeX-Inserting (sta stb stc num)
   " after entering stb insert stc and go back with the cursor by num positions.
     With prefix nothings gets replaced. If the previous char was sta nothing will be 
@@ -281,11 +330,9 @@ Adds auto close capability for $. See this [[http://tex.stackexchange.com/questi
     (insert stb)))
 
 (defun brf-TeX-dollarm () (interactive) (brf-TeX-Inserting ?\\ "$"  "$$" 1))
-
 (add-hook 'LaTeX-mode-hook
    (function (lambda ()
        (local-set-key (kbd "$")      'brf-TeX-dollarm))))
-#+END_SRC
 
 ** Auctex
 
@@ -417,11 +464,13 @@ We add a eqref reference format. See this [[http://tex.stackexchange.com/questio
 (use-package reftex
   :init
   (setq reftex-plug-into-AUCTeX t)
-  (setq reftex-label-alist '((nil ?e nil "~\\eqref{%s}" nil nil)))
+  (setq reftex-label-alist '(
+        (nil ?e nil "~\\eqref{%s}" nil nil)
+        ("thm" ?t "Theorem:" "~\\ref{%s}" t  ("theorem" "th.") -3)
+  ))
   :config
   (add-hook 'LaTeX-mode-hook 'turn-on-reftex)   ; with AUCTeX LaTeX mode
   (add-hook 'latex-mode-hook 'turn-on-reftex)   ; with Emacs latex mode
-
 )
 #+END_SRC
 
@@ -552,8 +601,6 @@ Adds more brackets support to =electric-pair-mode=.
   (?\[ . ?\])
   (?\( . ?\))
   (?$ . ?$)
-  (?= . ?=)
-  (?_ . ?_)
 ))
 #+END_SRC
 
@@ -585,7 +632,15 @@ to have a size proportional to the text. A solution to this issue was given by
 Activates =latex-math-mode=.
 
 #+BEGIN_SRC emacs-lisp
-(add-hook 'org-mode-hook 'LaTeX-math-mode)
+;(add-hook 'org-mode-hook 'LaTeX-math-mode)
+#+END_SRC
+
+*** Cdlatex
+
+Activates =org-cdlatex=. See http://orgmode.org/manual/CDLaTeX-mode.html.
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'org-mode-hook 'turn-on-org-cdlatex)
 #+END_SRC
 
 ** Images
@@ -622,6 +677,40 @@ Integrates org-agenda with gnome's agenda.
 
 #+BEGIN_SRC emacs-lisp
 ;(use-package org-gnome)
+#+END_SRC
+
+* Agenda
+
+http://jameswilliams.be/blog/2016/01/11/Taming-Your-GCal.html
+
+#+BEGIN_SRC emacs-lisp
+(setq org-default-notes-file "~/Documents/todo.org")
+;(define-key global-map "\C-cc" 'org-capture)
+#+END_SRC
+
+Log done state in TODOs
+#+BEGIN_SRC emacs-lisp
+(setq org-log-done t)
+#+END_SRC
+
+Set Org-Capture templates
+#+BEGIN_SRC emacs-lisp
+(setq org-capture-templates
+  `(("t" "todo" entry (file+headline "~/Documents/todo.org" "Tasks")
+    "** TODO %^{Task} %?")))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(setq org-agenda-files (list "~/Documents/todo.org"
+                             "~/Documents/schedule.org"
+))
+; Set key combos
+(define-key global-map "\C-ca" 'org-agenda)
+#+END_SRC
+
+
+#+BEGIN_SRC emacs-lisp
+(use-package calfw)
 #+END_SRC
 
 * Theme
@@ -695,7 +784,7 @@ http://emacsredux.com/blog/2015/01/18/customizing-the-fringes/
 
 #  LocalWords:  Auctex
 
-* Default screens and files
+* Default screens and buffers
 
 Splits the screen and open some buffers (myinit.org, shortcuts.org, *scratch*), see this [[http://stackoverflow.com/questions/999708/how-to-open-files-automatically-when-starting-emacs][question]].
 Recall that todo.org is the initial buffer choice.
