--- a/myinit.org
+++ b/myinit.org
@@ -303,8 +303,10 @@ Manual: https://staff.science.uva.nl/c.dominik/Tools/cdlatex/index.html
     '((?i ("\\in" "\\infty" "\\imath"))
       (?t ("\\to" "\\times" "\\tau"))
       (?p ("\\pi" "\\varpi"))
+      (?p ("\\subset" "\\upsilon"))
       (?n ("\\ne" "\\nu" "\\nabla"))
       (?c ("\\cap" "\\cup" "\\cos"))
+      (?: ("\\colon"))
       ;(?< ("\\leftarrow" "\\Leftarrow" "\\longleftarrow" "\\Longleftarrow"))
       ;(?> ("\\rightarrow" "\\Rightarrow" "\\longrightarrow" "\\Longrightarrow"))
   ))
